# server/api/Services/Interfaces/IUserService.cs
@@ -10,5 +10,8 @@ public interface IUserService
 {
     Task<PagedResult<UserDto>> GetAllUsers(SieveModel sieveModel);
     Task<UserDto?> GetUserById(Guid id);
+    Task<UserDto> CreateUser(CreateUserDto createUserDto);
+    Task<UserDto> UpdateUser(Guid id, UpdateUserDto updateUserDto);
     Task DeleteUser(Guid id);
+    Task<UserDto> RenewMembership(Guid id);
 }
